# iroha

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  ISSUE_1.md  ISSUE_2.md  Jenkinsfile  Jenkinsfile-new  Makefile  README.md  circle.yml  commands  data.h  dependencies.cmake  docker-compose.yml  fabfile.py  merkle.h  sonar-project.properties  winternitz.h
core/validation/: CMakeLists.txt  consensus_event_validator.cpp  consensus_event_validator.hpp  transaction_validator.cpp  transaction_validator.hpp
fuzz/: CMakeLists.txt  hash_fuzz.cpp
fuzz/core/crypto/: CMakeLists.txt
irohad/ametsuchi/: CMakeLists.txt  ametsuchi_stub.cpp  block_query.hpp  block_query_factory.hpp  block_storage.hpp  command_executor.hpp  command_executor_stub.cpp  ledger_state.hpp  mutable_factory.hpp  mutable_storage.hpp  os_persistent_state_factory.hpp  peer_query_factory.hpp  query_executor.hpp  query_executor_factory.hpp  storage.hpp  temporary_factory.hpp  temporary_wsv.hpp  tx_cache_outcome.hpp  tx_cache_response.hpp  tx_presence_cache.hpp  tx_presence_cache_utils.hpp  wsv_command.hpp  wsv_query.hpp  wsv_restorer.hpp
irohad/ametsuchi/impl/: CMakeLists.txt  block_storage_nudb.cpp  block_storage_nudb.hpp  flat_file_block_query.cpp  flat_file_block_query.hpp  flat_file_block_storage.cpp  flat_file_block_storage.hpp  flat_file_block_storage_factory.cpp  flat_file_block_storage_factory.hpp  in_memory_block_storage.cpp  in_memory_block_storage.hpp  mutable_storage_impl.cpp  mutable_storage_impl.hpp  postgres_block_index.cpp  postgres_block_index.hpp  postgres_block_query.cpp  postgres_block_query.hpp  postgres_command_executor.cpp  postgres_command_executor.hpp  postgres_ordering_service_persistent_state.cpp  postgres_ordering_service_persistent_state.hpp  postgres_query_executor.cpp  postgres_query_executor.hpp  postgres_result_converter.cpp  postgres_result_converter.hpp  postgres_wsv_command.cpp  postgres_wsv_command.hpp  postgres_wsv_common.hpp  postgres_wsv_query.cpp  postgres_wsv_query.hpp  redis_block_query.cpp  redis_block_query.hpp  soci_utils.hpp  storage_impl.cpp  storage_impl.hpp  temporary_wsv_impl.cpp  temporary_wsv_impl.hpp  tx_cache_outcome.cpp  (+4 more)
libs/common/: CMakeLists.txt  byteutils.hpp  cloneable.hpp  delay.hpp  files.cpp  hexutils.hpp  inplace_visitor.hpp  irohad_version.hpp  result.hpp  subscription_watcher.hpp  types.hpp
schema/: CMakeLists.txt  account.fbs  actions.fbs  block.proto  commands.proto  endpoint.proto  loader.proto  main.fbs  mst.proto  primitive.proto  queries.proto  query.fbs  responses.proto  transaction.fbs  yac.proto
shared_model/: CMakeLists.txt  clean.sh
shared_model/bindings/: CMakeLists.txt  bindings.i  client_api.cpp  client_api.hpp  model_blocks_query_builder.hpp  model_builder.cpp  model_crypto.cpp  model_query_builder.cpp  model_query_builder.hpp  model_transaction_builder.cpp  model_transaction_builder.hpp
shared_model/builders/: default_builders.hpp
shared_model/cmake/: dependencies.cmake
shared_model/converters/: README.md
shared_model/cryptography/: README.md  blob.hpp  hash.hpp  keypair.hpp
shared_model/execution/: CMakeLists.txt  command_executor.hpp  common_executor.hpp
shared_model/interfaces/: CMakeLists.txt  from_old.hpp  permissions.hpp  transaction.hpp
shared_model/schema/: CMakeLists.txt  block.proto  commands.proto  endpoint.proto  primitive.proto  proposal.proto  qry_responses.proto  queries.proto
shared_model/utils/: amount_utils.cpp  amount_utils.hpp  polymorphic_wrapper.hpp  reference_holder.hpp  string_builder.hpp  visitor_apply_for_all.hpp
shared_model/validators/: CMakeLists.txt  abstract_validator.hpp  any_block_validator.hpp  block_validator.hpp  block_variant_validator.hpp  blocks_query_validator.hpp  container_validator.hpp  default_proto_validator.hpp  default_validator.hpp  empty_block_validator.hpp  field_validator.cpp  field_validator.hpp  proposal_validator.hpp  query_validator.hpp  signable_validator.hpp  transaction_batch_validator.cpp  transaction_batch_validator.hpp  transaction_validator.hpp  validators_common.hpp
test/: CMakeLists.txt  gen_flatbuffer.hpp  grpc_test.cpp
test/ametsuchi/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  bm_pipeline.cpp  bm_query.cpp  pipeline_benchmark.cpp  query_benchmark.cpp
test/connection/: CMakeLists.txt  connection_with_grpc_test.cpp
test/consensus/: CMakeLists.txt  sumeragi_test.cpp  transaction_test.cpp
test/crypto/: CMakeLists.txt  base64_test.cpp  hash_test.cpp  signature_test.cpp
test/framework/: CMakeLists.txt  base_tx.hpp  batch_helper.hpp  common_constants.cpp  config_helper.cpp  config_helper.hpp  result_fixture.hpp  specified_visitor.hpp  sql_query.cpp  sql_query.hpp  test_logger.cpp  test_subscriber.hpp  test_subscriber_testing.cpp
test/fuzzing/: CMakeLists.txt  block_loader_fixture.hpp  consensus_fuzz.cpp  find_fuzz.cpp  fuzzing_logger.hpp  mst_fuzz.cpp  ordering_gate_fuzz.cpp  ordering_service_fixture.hpp  request_proposal_fuzz.cpp  retrieve_blocks_fuzz.cpp  send_batches_fuzz.cpp  status_fuzz.cpp  torii_fuzz.cpp
test/integration/: CMakeLists.txt  client_test.cpp  irohad_test.cpp
test/libs/: CMakeLists.txt
test/load/: Dockerfile  README.md  docker-compose.yml  locustfile-performance.py  locustfile.py
test/module/: CMakeLists.txt
test/regression/: query_test.cpp  regression_test.cpp
test/scenario/: CMakeLists.txt  transfer_with_tax_test.cpp  virtual_currency_test.cpp
test/smart_contract/: CMakeLists.txt  java_query_repo_account_test.cpp  java_query_repo_asset_test.cpp  java_query_repo_domain_test.cpp  java_query_repo_invocation_test.cpp  java_query_repo_peer_test.cpp  java_query_repo_simple_asset_test.cpp  smart_contract_weighted_rate.cpp
test/system/: CMakeLists.txt  irohad_test.cpp
test/transaction_builder/: CMakeLists.txt  transaction_builder_add_test.cpp  transaction_builder_remove_test.cpp  transaction_builder_transfer_test.cpp  transaction_builder_unset_test.cpp  transaction_builder_update_test.cpp
test/validation/: CMakeLists.txt  transaction_validator_test.cpp
(+1367 files in other folders)
